[tool.poetry]
name = "drcov"
version = "0.1.0"
description = ""
authors = ["Koh M. Nakagawa <tsunekou1019@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kohnakagawa/drcovpy"
repository = "https://github.com/kohnakagawa/drcovpy"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"
pre-commit = "^2.9.3"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
